--- a/1/EomTool/EomToolWeb/Web.config
+++ b/1/EomTool/EomToolWeb/Web.config
@@ -10,11 +10,11 @@
     <section name="eomToolWeb" type="EomToolWeb.Infrastructure.EomToolWebConfigSection" allowLocation="true" allowDefinition="Everywhere" />
   </configSections>
   <connectionStrings>
-    <add name="EomToolSecurityEntities" connectionString="metadata=res://*/Entities.EomToolSecurity.csdl|res://*/Entities.EomToolSecurity.ssdl|res://*/Entities.EomToolSecurity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=EomToolSecurity;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DAMain1" connectionString="data source=biz2\da;initial catalog=DAMain1;user id=sa;password=sp0ngbOb" providerName="System.Data.SqlClient" />
-    <add name="EFDbContext" connectionString="data source=biz2\da;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="CakeStagingEntities" connectionString="metadata=res://*/Staging.CakeStaging.csdl|res://*/Staging.CakeStaging.ssdl|res://*/Staging.CakeStaging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;User=sa;Password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DAMain1Entities" connectionString="metadata=res://*/Entities.DAMain1.csdl|res://*/Entities.DAMain1.ssdl|res://*/Entities.DAMain1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=DAMain1;persist security info=True;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EomToolSecurityEntities" connectionString="metadata=res://*/Entities.EomToolSecurity.csdl|res://*/Entities.EomToolSecurity.ssdl|res://*/Entities.EomToolSecurity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=173.204.123.82;initial catalog=EomToolSecurity;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DAMain1" connectionString="data source=173.204.123.82;initial catalog=DAMain1;user id=sa;password=sp0ngbOb" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext" connectionString="data source=173.204.123.82;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="CakeStagingEntities" connectionString="metadata=res://*/Staging.CakeStaging.csdl|res://*/Staging.CakeStaging.ssdl|res://*/Staging.CakeStaging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=173.204.123.82;initial catalog=Cake;User=sa;Password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DAMain1Entities" connectionString="metadata=res://*/Entities.DAMain1.csdl|res://*/Entities.DAMain1.ssdl|res://*/Entities.DAMain1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=173.204.123.82;initial catalog=DAMain1;persist security info=True;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -26,6 +26,7 @@
     <add key="EmailToEOM" value="eom@directagents.com" />
   </appSettings>
   <system.web>
+    <trust level="Medium" />
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Windows" />
     <authorization>
@@ -74,7 +75,7 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="Data Source=biz2\da; User=sa; Password=sp0ngbOb; MultipleActiveResultSets=True" />
+        <parameter value="Data Source=173.204.123.82; User=sa; Password=sp0ngbOb; MultipleActiveResultSets=True" />
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
