--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -131,7 +131,7 @@
         <value>False</value>
       </setting>
       <setting name="SettingsConnectionString" serializeAs="String">
-        <value>Data Source=biz2\da;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb</value>
+        <value>Data Source=173.204.123.82;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb</value>
       </setting>
     </EomApp1.Properties.Settings>
   </userSettings>
