--- a/1/EomTool/EomApp1/Properties/Settings.settings
+++ b/1/EomTool/EomApp1/Properties/Settings.settings
@@ -145,7 +145,7 @@
       <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=EomToolSecurity;Integrated Security=True</Value>
     </Setting>
     <Setting Name="SettingsConnectionString" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb</Value>
+      <Value Profile="(Default)">Data Source=173.204.123.82;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb</Value>
     </Setting>
   </Settings>
 </SettingsFile>
