restore to pre-sandy

--- a/1/EomTool/EomApp1/app.config
+++ b/1/EomTool/EomApp1/app.config
@@ -19,7 +19,7 @@
     <add name="EomApp1.Properties.Settings.Nov10Eom2ConnectionString2"
       connectionString="Data Source=aaron\sqlexpress;Initial Catalog=Nov10Eom2;Integrated Security=True" />
     <add name="EomApp1.Properties.Settings.DAMain1ConnectionString"
-      connectionString="Data Source=173.204.123.82;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb"
+      connectionString="Data Source=biz2\da;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb"
       providerName="System.Data.SqlClient" />
     <add name="EomApp1.Properties.Settings.DADatabaseR2ConnectionString"
       connectionString="Data Source=aaron\sqlexpress;Initial Catalog=DADatabaseR2;Integrated Security=True"
@@ -45,9 +45,9 @@
       connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseApril2012_before_cake;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="EomApp1.Properties.Settings.OverrideConnectionString"
-      connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseSep2012;User=sa;Password=sp0ngbOb" />
+      connectionString="Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test2;User=sa;Password=sp0ngbOb" />
     <add name="EomApp1.Properties.Settings.EomToolSecurityConnectionString"
-      connectionString="Data Source=173.204.123.82;Initial Catalog=EOMToolSecurity;User=sa;Password=sp0ngbOb"
+      connectionString="Data Source=biz2\da;Initial Catalog=EOMToolSecurity;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="EomApp1.Properties.Settings.DADatabaseR1ConnectionString1"
       connectionString="Data Source=biz2\da;Initial Catalog=DADatabaseR1;Integrated Security=True"
@@ -90,13 +90,13 @@
       providerName="System.Data.EntityClient" />
     <add name="CakeSynchEntities" connectionString="metadata=res://*/Formss.Synch.__defunct.CakeSynchLog.csdl|res://*/Formss.Synch.__defunct.CakeSynchLog.ssdl|res://*/Formss.Synch.__defunct.CakeSynchLog.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="CakeEntities" connectionString="metadata=res://*/Screens.Synch.Models.Cake.CakeStaging.csdl|res://*/Screens.Synch.Models.Cake.CakeStaging.ssdl|res://*/Screens.Synch.Models.Cake.CakeStaging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=173.204.123.82;initial catalog=Cake;persist security info=True;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;"
+    <add name="CakeEntities" connectionString="metadata=res://*/Screens.Synch.Models.Cake.CakeStaging.csdl|res://*/Screens.Synch.Models.Cake.CakeStaging.ssdl|res://*/Screens.Synch.Models.Cake.CakeStaging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
     <add name="EomDatabaseEntities" connectionString="metadata=res://*/Screens.Synch.Models.Eom.EomModel.csdl|res://*/Screens.Synch.Models.Eom.EomModel.ssdl|res://*/Screens.Synch.Models.Eom.EomModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=DADatabaseJune2012;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
     <add name="Eom" connectionString="metadata=res://*/Screens.Final.Models.EomModel.csdl|res://*/Screens.Final.Models.EomModel.ssdl|res://*/Screens.Final.Models.EomModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=zDADatabaseJuly2012Test;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="EomToolSecurityEntities" connectionString="metadata=res://*/Security.EomToolSecurity.csdl|res://*/Security.EomToolSecurity.ssdl|res://*/Security.EomToolSecurity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=173.204.123.82;initial catalog=EOMToolSecurity;persist security info=True;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    <add name="EomToolSecurityEntities" connectionString="metadata=res://*/Security.EomToolSecurity.csdl|res://*/Security.EomToolSecurity.ssdl|res://*/Security.EomToolSecurity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=EOMToolSecurity;User=sa;Password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
     <add name="MediaBuyerWorkflowEntities" connectionString="metadata=res://*/Screens.MediaBuyerWorkflow.MediaBuyerWorkflowModel.csdl|res://*/Screens.MediaBuyerWorkflow.MediaBuyerWorkflowModel.ssdl|res://*/Screens.MediaBuyerWorkflow.MediaBuyerWorkflowModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=zDADatabaseJuly2012Test2;persist security info=True;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
@@ -128,10 +128,10 @@
         <value>DirectTrack</value>
       </setting>
       <setting name="TestMode" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="SettingsConnectionString" serializeAs="String">
-        <value>Data Source=173.204.123.82;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb</value>
+        <value>Data Source=biz2\da;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb</value>
       </setting>
     </EomApp1.Properties.Settings>
   </userSettings>
