--- a/1/EomTool/EomApp1/Properties/Settings.settings
+++ b/1/EomTool/EomApp1/Properties/Settings.settings
@@ -23,10 +23,10 @@
     <Setting Name="DAMain1ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=173.204.123.82;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=biz2\da;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=173.204.123.82;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb</Value>
+      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb</Value>
     </Setting>
     <Setting Name="DADatabaseR2ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
@@ -108,23 +108,23 @@
     <Setting Name="OverrideConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=biz2\da;Initial Catalog=DADatabaseSep2012;User=sa;Password=sp0ngbOb&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test2;User=sa;Password=sp0ngbOb&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=DADatabaseSep2012;User=sa;Password=sp0ngbOb</Value>
+      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=zDADatabaseJuly2012Test2;User=sa;Password=sp0ngbOb</Value>
     </Setting>
     <Setting Name="OverrideDate" Type="System.DateTime" Scope="Application">
       <Value Profile="(Default)">2012-07-01</Value>
     </Setting>
     <Setting Name="TestMode" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="EomToolSecurityConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=173.204.123.82;Initial Catalog=EOMToolSecurity;User=sa;Password=sp0ngbOb&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=biz2\da;Initial Catalog=EOMToolSecurity;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=173.204.123.82;Initial Catalog=EOMToolSecurity;User=sa;Password=sp0ngbOb</Value>
+      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=EOMToolSecurity;Integrated Security=True</Value>
     </Setting>
     <Setting Name="TestUserIdentities" Type="System.String" Scope="Application">
       <Value Profile="(Default)">directagents\aanodide,directagents\kslesinsky,aaron-pavillion\aaron</Value>
@@ -145,7 +145,7 @@
       <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=EomToolSecurity;Integrated Security=True</Value>
     </Setting>
     <Setting Name="SettingsConnectionString" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Data Source=173.204.123.82;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb</Value>
+      <Value Profile="(Default)">Data Source=biz2\da;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb</Value>
     </Setting>
   </Settings>
 </SettingsFile>
