--- a/2/LendingTree/packages/repositories.config
+++ b/2/LendingTree/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\LTWeb.Common\packages.config" />
   <repository path="..\LTWeb\packages.config" />
 </repositories>
