--- a/EBooks/Programming ASP.NET MVC 4 - OREILLY/CodeExamples-master/Ebuy.Website/packages.config
+++ b/EBooks/Programming ASP.NET MVC 4 - OREILLY/CodeExamples-master/Ebuy.Website/packages.config
@@ -1,12 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.1.3.42154" targetFramework="net45" />
   <package id="AutoMapper" version="2.2.0" targetFramework="net45" />
+  <package id="dotless" version="1.3.1.0" targetFramework="net45" />
+  <package id="DotNetOpenAuth" version="4.1.3.12303" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.0.3.12153" targetFramework="net45" />
+  <package id="DotNetOpenAuth.AspNet" version="4.1.3.12303" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.0.3.12153" targetFramework="net45" />
+  <package id="DotNetOpenAuth.Core" version="4.1.3.12303" targetFramework="net45" />
+  <package id="DotNetOpenAuth.Core.UI" version="4.1.3.12303" targetFramework="net45" />
+  <package id="DotNetOpenAuth.InfoCard" version="4.1.3.12303" targetFramework="net45" />
+  <package id="DotNetOpenAuth.InfoCard.UI" version="4.1.3.12303" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Common" version="4.1.3.12303" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.0.3.12153" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.3.12303" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Core" version="4.0.3.12153" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Core" version="4.1.3.12303" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.ServiceProvider" version="4.1.3.12303" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.0.3.12153" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.Core" version="4.1.3.12303" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.Core.UI" version="4.1.3.12303" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.Provider" version="4.1.3.12303" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.Provider.UI" version="4.1.3.12303" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.0.3.12153" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.3.12303" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty.UI" version="4.1.3.12303" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenIdInfoCard.UI" version="4.1.3.12303" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OpenIdOAuth" version="4.1.3.12303" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net45" />
@@ -29,9 +49,15 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net45" />
+  <package id="Ninject.Web" version="3.0.0.5" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net45" />
+  <package id="Ninject.Web.Mvc1" version="3.0.0.6" targetFramework="net45" />
+  <package id="System.Web.Optimization.Less" version="1.0.0.1" targetFramework="net45" />
   <package id="WebActivator" version="1.5.1" targetFramework="net45" />
+  <package id="WebActivator" version="1.5.2" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
