--- a/2/LendingTree/LTWeb.Common/LTWeb.Common.csproj
+++ b/2/LendingTree/LTWeb.Common/LTWeb.Common.csproj
@@ -86,9 +86,11 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201211090316562_Leads.resx">
       <DependentUpon>201211090316562_Leads.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201211090342230_ResponseTimeStamp.resx">
       <DependentUpon>201211090342230_ResponseTimeStamp.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
