--- a/2/LendingTree/LTWeb.Common/LTWeb.Common.csproj
+++ b/2/LendingTree/LTWeb.Common/LTWeb.Common.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DataAccess\IRepository.cs" />
     <Compile Include="DataAccess\LTWebDataContext.cs" />
     <Compile Include="DataAccess\Repository.cs" />
+    <Compile Include="Entities\AdminSetting.cs" />
     <Compile Include="Entities\Annotations\UniqueAttribute.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Lead.cs" />
@@ -66,6 +67,10 @@
     <Compile Include="Migrations\201211090342230_ResponseTimeStamp.cs" />
     <Compile Include="Migrations\201211090342230_ResponseTimeStamp.Designer.cs">
       <DependentUpon>201211090342230_ResponseTimeStamp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201211150915333_AdminSetting.cs" />
+    <Compile Include="Migrations\201211150915333_AdminSetting.Designer.cs">
+      <DependentUpon>201211150915333_AdminSetting.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -91,6 +96,9 @@
     <EmbeddedResource Include="Migrations\201211090342230_ResponseTimeStamp.resx">
       <DependentUpon>201211090342230_ResponseTimeStamp.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201211150915333_AdminSetting.resx">
+      <DependentUpon>201211150915333_AdminSetting.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
