--- a/2/LendingTree/LTWeb/LTWeb.csproj
+++ b/2/LendingTree/LTWeb/LTWeb.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Questions.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Models\AdminVM.cs" />
     <Compile Include="Models\LendingTreeVM.cs" />
