--- a/2/LendingTree/LTWeb.Common/LTWeb.Common.csproj
+++ b/2/LendingTree/LTWeb.Common/LTWeb.Common.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\LTRequest.cs" />
+    <Compile Include="XmlUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
