--- a/2/LendingTree/LTWeb/LTWeb.csproj
+++ b/2/LendingTree/LTWeb/LTWeb.csproj
@@ -130,11 +130,16 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Questions.cs" />
-    <Compile Include="Settings.cs" />
+    <Compile Include="LTWebSession.cs" />
     <Compile Include="Models\AdminVM.cs" />
     <Compile Include="Models\LendingTreeVM.cs" />
     <Compile Include="Models\QuestionVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionKeys.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SessionKeys.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\connectionsconfig.xml" />
@@ -248,7 +253,6 @@
     <Content Include="Views\Questions\FormFields.cshtml" />
     <Content Include="Views\Shared\_LTLayout.cshtml" />
     <Content Include="Views\Test\Test.cshtml" />
-    <Content Include="Views\Shared\LTModel.cshtml" />
     <Content Include="Views\Questions\ShowInner.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
@@ -264,6 +268,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SessionKeys.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>SessionKeys.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
