--- a/2/LendingTree/LTWeb/LTWeb.csproj
+++ b/2/LendingTree/LTWeb/LTWeb.csproj
@@ -239,6 +239,81 @@
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\lt-script.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
+    <Content Include="Scripts\validation-engine\.gitignore" />
+    <Content Include="Scripts\validation-engine\css\customMessages.css" />
+    <Content Include="Scripts\validation-engine\css\screenshot.png" />
+    <Content Include="Scripts\validation-engine\css\template.css" />
+    <Content Include="Scripts\validation-engine\css\validationEngine.jquery.css" />
+    <Content Include="Scripts\validation-engine\demos\demoAdjustments.html" />
+    <Content Include="Scripts\validation-engine\demos\demoAjaxInlinePHP.html" />
+    <Content Include="Scripts\validation-engine\demos\demoAjaxJAVA.html" />
+    <Content Include="Scripts\validation-engine\demos\demoAjaxSubmitPHP.html" />
+    <Content Include="Scripts\validation-engine\demos\demoAttr.html" />
+    <Content Include="Scripts\validation-engine\demos\demoAutoHide.html" />
+    <Content Include="Scripts\validation-engine\demos\demoCheckBox.html" />
+    <Content Include="Scripts\validation-engine\demos\demoChosenLibrary.html" />
+    <Content Include="Scripts\validation-engine\demos\demoCustomErrorMessages.html" />
+    <Content Include="Scripts\validation-engine\demos\demoDatepicker.html" />
+    <Content Include="Scripts\validation-engine\demos\demoErrorLimit.html" />
+    <Content Include="Scripts\validation-engine\demos\demoFieldTypes.html" />
+    <Content Include="Scripts\validation-engine\demos\demoGlobalSettings.html" />
+    <Content Include="Scripts\validation-engine\demos\demoHooks.html" />
+    <Content Include="Scripts\validation-engine\demos\demoInlineMessages.html" />
+    <Content Include="Scripts\validation-engine\demos\demoLiveEvent.html" />
+    <Content Include="Scripts\validation-engine\demos\demoMultipleForms.html" />
+    <Content Include="Scripts\validation-engine\demos\demoOneMessage.html" />
+    <Content Include="Scripts\validation-engine\demos\demoOnForm.html" />
+    <Content Include="Scripts\validation-engine\demos\demoOverflown.html" />
+    <Content Include="Scripts\validation-engine\demos\demoPerFieldPromptDirection.html" />
+    <Content Include="Scripts\validation-engine\demos\demoPositioning.html" />
+    <Content Include="Scripts\validation-engine\demos\demoRegExp.html" />
+    <Content Include="Scripts\validation-engine\demos\demoSelectBoxLibrary.html" />
+    <Content Include="Scripts\validation-engine\demos\demoShowPrompt.html" />
+    <Content Include="Scripts\validation-engine\demos\demoSilent.html" />
+    <Content Include="Scripts\validation-engine\demos\demoValidationComplete.html" />
+    <Content Include="Scripts\validation-engine\demos\demoValidators.html" />
+    <Content Include="Scripts\validation-engine\demos\demoValidators.ja.html" />
+    <Content Include="Scripts\validation-engine\demos\demoWithoutId.html" />
+    <Content Include="Scripts\validation-engine\index.html" />
+    <Content Include="Scripts\validation-engine\js\contrib\other-validations.js" />
+    <Content Include="Scripts\validation-engine\js\jquery-1.6.min.js" />
+    <Content Include="Scripts\validation-engine\js\jquery-1.7.2.min.js" />
+    <Content Include="Scripts\validation-engine\js\jquery-1.8.2.min.js" />
+    <Content Include="Scripts\validation-engine\js\jquery.validationEngine.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-cz.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-da.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-de.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-en.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-es.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-et.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-fa.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-fi.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-fr.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-hr.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-hu.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-it.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-ja.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-nl.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-no.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-pl.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-pt.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-pt_BR.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-ro.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-ru.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-se.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-tr.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-vi.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-zh_CN.js" />
+    <Content Include="Scripts\validation-engine\js\languages\jquery.validationEngine-zh_TW.js" />
+    <Content Include="Scripts\validation-engine\tests\issue430.html" />
+    <Content Include="Scripts\validation-engine\tests\issue451.html" />
+    <Content Include="Scripts\validation-engine\tests\issue480.html" />
+    <Content Include="Scripts\validation-engine\tests\issue493.html" />
+    <Content Include="Scripts\validation-engine\tests\issue498.html" />
+    <Content Include="Scripts\validation-engine\tests\issue507.html" />
+    <Content Include="Scripts\validation-engine\tests\issue524.html" />
+    <Content Include="Scripts\validation-engine\test\AjaxTestServer.java" />
+    <Content Include="Scripts\validation-engine\test\NanoHTTPD.java" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -260,6 +335,20 @@
     <Content Include="Views\Test\Test.cshtml" />
     <Content Include="Views\Questions\ShowInner.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Scripts\validation-engine\demos\phpajax\ajaxValidateFieldName.php" />
+    <Content Include="Scripts\validation-engine\demos\phpajax\ajaxValidateFieldUser.php" />
+    <Content Include="Scripts\validation-engine\demos\phpajax\ajaxValidateSubmit.php" />
+    <Content Include="Scripts\validation-engine\js\forms.less" />
+    <Content Include="Scripts\validation-engine\README.md" />
+    <Content Include="Scripts\validation-engine\runDemo.bat" />
+    <Content Include="Scripts\validation-engine\runDemo.sh" />
+    <Content Include="Scripts\validation-engine\tests\issue493" />
+    <Content Include="Scripts\validation-engine\test\AjaxTestServer%24AjaxValidationFieldResponse.class" />
+    <Content Include="Scripts\validation-engine\test\AjaxTestServer%24AjaxValidationFormResponse.class" />
+    <Content Include="Scripts\validation-engine\test\AjaxTestServer.class" />
+    <Content Include="Scripts\validation-engine\test\NanoHTTPD%24HTTPSession.class" />
+    <Content Include="Scripts\validation-engine\test\NanoHTTPD%24Response.class" />
+    <Content Include="Scripts\validation-engine\test\NanoHTTPD.class" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LTWeb.Common\LTWeb.Common.csproj">
