--- a/2/LendingTree/LTWeb.Common/LTWeb.Common.csproj
+++ b/2/LendingTree/LTWeb.Common/LTWeb.Common.csproj
@@ -75,8 +75,8 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\LTRequest.cs" />
-    <Compile Include="SessionUtility.cs" />
-    <Compile Include="XmlUtility.cs" />
+    <Compile Include="Utilities\SessionUtility.cs" />
+    <Compile Include="Utilities\XmlUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
