--- a/2/LendingTree/LTWeb/Web.config
+++ b/2/LendingTree/LTWeb/Web.config
@@ -16,6 +16,14 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- Begin LTWeb -->
+    <add key="LendingTreeServiceConfig" value="Test" />
+    <add key="BaseUrl" value="https://mortgage-rate-offers.com" />
+    <add key="AdminIps" value="24.103.67.186,::1" />
+    <add key="StatesExcludedFromDisclosure" value="AK,AR,CT,DC,GA,HI,MI,NE,NH,NM,OK,OR,SD,TN,UT,WV" />
+    <add key="Mode_SsnRequired" value="1" />
+    <add key="Mode_SsnNotRequired" value="2" />
+    <!-- End LTWeb -->
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
