--- a/2/LendingTree/LTWeb/LTWeb.csproj
+++ b/2/LendingTree/LTWeb/LTWeb.csproj
@@ -149,7 +149,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\connectionsconfig.xml" />
-    <Content Include="App_Data\exampleLead.xml" />
+    <Content Include="App_Data\exampleLead.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="App_Data\questions.xml">
       <SubType>Designer</SubType>
     </Content>
