--- a/2/LendingTree/LTWeb/Web.config
+++ b/2/LendingTree/LTWeb/Web.config
@@ -17,7 +17,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!-- Begin LTWeb -->
-    <add key="LendingTreeServiceConfig" value="Test" />
+    <add key="LendingTreeServiceConfig" value="Production" />
     <add key="BaseUrl" value="https://mortgage-rate-offers.com" />
     <add key="AdminIps" value="24.103.67.186,::1" />
     <add key="StatesExcludedFromDisclosure" value="AK,AR,CT,DC,GA,HI,MI,NE,NH,NM,OK,OR,SD,TN,UT,WV" />
