--- a/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
+++ b/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IDAMain1Repository.cs" />
+    <Compile Include="Abstract\IPaymentBatchRepository.cs" />
     <Compile Include="Concrete\DAMain1Repository.cs" />
     <Compile Include="Abstract\IAffiliateRepository.cs" />
     <Compile Include="Abstract\IBatchRepository.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Concrete\AffiliateRepository.cs" />
     <Compile Include="Concrete\BatchRepository.cs" />
     <Compile Include="Concrete\MainRepository.cs" />
+    <Compile Include="Concrete\PaymentBatchRepository.cs" />
     <Compile Include="Concrete\SecurityRepository.cs" />
     <Compile Include="Entities\BatchUpdate.cs" />
     <Compile Include="Entities\CampaignStatus.cs" />
