--- a/1/EomTool/EomTool.Domain/App.Config
+++ b/1/EomTool/EomTool.Domain/App.Config
@@ -1,8 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <connectionStrings>
     <add name="EomEntities" connectionString="metadata=res://*/Entities.EomModel.csdl|res://*/Entities.EomModel.ssdl|res://*/Entities.EomModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=zDADatabaseNov2012Test;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="EomToolSecurityEntities" connectionString="metadata=res://*/Entities.EomToolSecurity.csdl|res://*/Entities.EomToolSecurity.ssdl|res://*/Entities.EomToolSecurity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=EomToolSecurity;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DAMain1Entities" connectionString="metadata=res://*/Entities.DAMain1.csdl|res://*/Entities.DAMain1.ssdl|res://*/Entities.DAMain1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=DAMain1;persist security info=True;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+  </entityFramework>
 </configuration>
