--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -2655,10 +2655,10 @@
     <None Include="Scripts\kendoui\examples\content\web\datasource\top250movies.json" />
     <Content Include="Views\Campaigns\Filter.cshtml" />
     <Content Include="Views\Campaigns\Items.cshtml" />
-    <Content Include="Views\Payouts\ChooseMonth.cshtml" />
     <Content Include="Views\Wiki\Settings.cshtml" />
     <Content Include="Views\PaymentBatches\Index.cshtml" />
     <Content Include="Views\PaymentBatches\Payments.cshtml" />
+    <Content Include="Views\Shared\ChooseMonth.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
