--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -2659,6 +2659,7 @@
     <Content Include="Views\PaymentBatches\Index.cshtml" />
     <Content Include="Views\PaymentBatches\Payments.cshtml" />
     <Content Include="Views\Shared\ChooseMonth.cshtml" />
+    <Content Include="Views\PaymentBatches\PubNotes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
