PubNotesInfrastructure, Reset, etc

--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -2662,6 +2662,7 @@
     <Content Include="Views\Shared\ChooseMonth.cshtml" />
     <Content Include="Views\PaymentBatches\PubNotes.cshtml" />
     <Content Include="Views\PaymentBatches\Summary.cshtml" />
+    <Content Include="Views\PaymentBatches\PubNotesInfrastructure.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
