paymentBatches config section

--- a/1/EomTool/EomToolWeb/Web.config
+++ b/1/EomTool/EomToolWeb/Web.config
@@ -78,5 +78,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  <eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" debugMode="true" />
+  <eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" debugMode="true">
+    <paymentBatches canHold="DIRECTAGENTS\jboaz" />
+  </eomToolWeb>
 </configuration>
